contrast issue, white to black

--- a/styles.css
+++ b/styles.css
@@ -577,7 +577,7 @@ footer img {
 
 .features-info{
     background-color: #B042E3;
-    color: white;
+    color: black;
     padding: 20px;
     border-radius: 15px;
     margin-bottom: 30px;
